parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> PROG
Rule 1     PROG -> PROGRAMA ID SEMI DECLARACOES INICIO COMANDOS FIM DOT
Rule 2     DECLARACOES -> VAR IDS COLON TIPO SEMI DECLARACOES
Rule 3     DECLARACOES -> <empty>
Rule 4     TIPO -> INTEIRO
Rule 5     TIPO -> LOGICO
Rule 6     COMANDOS -> COMANDO SEMI COMANDOS
Rule 7     COMANDOS -> <empty>
Rule 8     COMANDO -> ATRIBUICOES
Rule 9     COMANDO -> LEITURA
Rule 10    COMANDO -> ESCRITA
Rule 11    COMANDO -> COMPOSTO
Rule 12    COMANDO -> CONDICIONAL
Rule 13    COMANDO -> REPETICAO
Rule 14    ATRIBUICOES -> ID ATRIB EXPR
Rule 15    LEITURA -> LER LPAREN IDS RPAREN
Rule 16    ESCRITA -> ESCREVER LPAREN ESPR_STR RPAREN
Rule 17    ESPR_STR -> ITEM_ESCRITA ESPR_STR_
Rule 18    ESPR_STR_ -> COMMA ITEM_ESCRITA ESPR_STR_
Rule 19    ESPR_STR_ -> <empty>
Rule 20    ITEM_ESCRITA -> EXPR
Rule 21    ITEM_ESCRITA -> EXPR_LOGICA
Rule 22    ITEM_ESCRITA -> STR
Rule 23    ITEM_ESCRITA -> ID
Rule 24    COMPOSTO -> INICIO COMANDOS FIM
Rule 25    CONDICIONAL -> SE EXPR_LOGICA ENTAO COMANDOS SENAO COMANDOS FIM
Rule 26    CONDICIONAL -> SE EXPR_LOGICA ENTAO COMANDOS FIM
Rule 27    REPETICAO -> ENQUANTO EXPR_LOGICA FACA COMANDOS FIM
Rule 28    IDS -> ID _IDS
Rule 29    _IDS -> COMMA ID _IDS
Rule 30    _IDS -> <empty>
Rule 31    EXPR -> TERMO EXPR_
Rule 32    EXPR_ -> MAIS TERMO EXPR_
Rule 33    EXPR_ -> MENOS TERMO EXPR_
Rule 34    EXPR_ -> <empty>
Rule 35    TERMO -> FATOR TERMO_
Rule 36    TERMO_ -> VEZES FATOR TERMO_
Rule 37    TERMO_ -> DIV FATOR TERMO_
Rule 38    TERMO_ -> <empty>
Rule 39    FATOR -> NUM
Rule 40    FATOR -> ID
Rule 41    FATOR -> LPAREN EXPR RPAREN
Rule 42    FATOR -> MENOS FATOR
Rule 43    FATOR -> COMMA FATOR
Rule 44    FATOR -> BOOL
Rule 45    EXPR_LOGICA -> TERMO_LOGICO OR EXPR_LOGICA
Rule 46    EXPR_LOGICA -> TERMO_LOGICO
Rule 47    TERMO_LOGICO -> FATOR_LOGICO AND TERMO_LOGICO
Rule 48    TERMO_LOGICO -> FATOR_LOGICO
Rule 49    FATOR_LOGICO -> NOT FATOR_LOGICO
Rule 50    FATOR_LOGICO -> RELACIONAL
Rule 51    FATOR_LOGICO -> LPAREN EXPR_LOGICA RPAREN
Rule 52    FATOR_LOGICO -> ID
Rule 53    FATOR_LOGICO -> BOOL
Rule 54    RELACIONAL -> EXPR OP_REL EXPR
Rule 55    OP_REL -> MENOR
Rule 56    OP_REL -> MENORIG
Rule 57    OP_REL -> MAIOR
Rule 58    OP_REL -> MAIORIG
Rule 59    OP_REL -> IGUAL
Rule 60    OP_REL -> DIF

Terminals, with rules where they appear

AND                  : 47
ATRIB                : 14
BOOL                 : 44 53
COLON                : 2
COMMA                : 18 29 43
DIF                  : 60
DIV                  : 37
DOT                  : 1
ENQUANTO             : 27
ENTAO                : 25 26
ESCREVER             : 16
FACA                 : 27
FIM                  : 1 24 25 26 27
ID                   : 1 14 23 28 29 40 52
IGUAL                : 59
INICIO               : 1 24
INTEIRO              : 4
LER                  : 15
LOGICO               : 5
LPAREN               : 15 16 41 51
MAIOR                : 57
MAIORIG              : 58
MAIS                 : 32
MENOR                : 55
MENORIG              : 56
MENOS                : 33 42
NOT                  : 49
NUM                  : 39
OR                   : 45
PROGRAMA             : 1
RPAREN               : 15 16 41 51
SE                   : 25 26
SEMI                 : 1 2 6
SENAO                : 25
STR                  : 22
VAR                  : 2
VEZES                : 36
error                : 

Nonterminals, with rules where they appear

ATRIBUICOES          : 8
COMANDO              : 6
COMANDOS             : 1 6 24 25 25 26 27
COMPOSTO             : 11
CONDICIONAL          : 12
DECLARACOES          : 1 2
ESCRITA              : 10
ESPR_STR             : 16
ESPR_STR_            : 17 18
EXPR                 : 14 20 41 54 54
EXPR_                : 31 32 33
EXPR_LOGICA          : 21 25 26 27 45 51
FATOR                : 35 36 37 42 43
FATOR_LOGICO         : 47 48 49
IDS                  : 2 15
ITEM_ESCRITA         : 17 18
LEITURA              : 9
OP_REL               : 54
PROG                 : 0
RELACIONAL           : 50
REPETICAO            : 13
TERMO                : 31 32 33
TERMO_               : 35 36 37
TERMO_LOGICO         : 45 46 47
TIPO                 : 2
_IDS                 : 28 29

Parsing method: LALR

state 0

    (0) S' -> . PROG
    (1) PROG -> . PROGRAMA ID SEMI DECLARACOES INICIO COMANDOS FIM DOT

    PROGRAMA        shift and go to state 2

    PROG                           shift and go to state 1

state 1

    (0) S' -> PROG .



state 2

    (1) PROG -> PROGRAMA . ID SEMI DECLARACOES INICIO COMANDOS FIM DOT

    ID              shift and go to state 3


state 3

    (1) PROG -> PROGRAMA ID . SEMI DECLARACOES INICIO COMANDOS FIM DOT

    SEMI            shift and go to state 4


state 4

    (1) PROG -> PROGRAMA ID SEMI . DECLARACOES INICIO COMANDOS FIM DOT
    (2) DECLARACOES -> . VAR IDS COLON TIPO SEMI DECLARACOES
    (3) DECLARACOES -> .

    VAR             shift and go to state 6
    INICIO          reduce using rule 3 (DECLARACOES -> .)

    DECLARACOES                    shift and go to state 5

state 5

    (1) PROG -> PROGRAMA ID SEMI DECLARACOES . INICIO COMANDOS FIM DOT

    INICIO          shift and go to state 7


state 6

    (2) DECLARACOES -> VAR . IDS COLON TIPO SEMI DECLARACOES
    (28) IDS -> . ID _IDS

    ID              shift and go to state 9

    IDS                            shift and go to state 8

state 7

    (1) PROG -> PROGRAMA ID SEMI DECLARACOES INICIO . COMANDOS FIM DOT
    (6) COMANDOS -> . COMANDO SEMI COMANDOS
    (7) COMANDOS -> .
    (8) COMANDO -> . ATRIBUICOES
    (9) COMANDO -> . LEITURA
    (10) COMANDO -> . ESCRITA
    (11) COMANDO -> . COMPOSTO
    (12) COMANDO -> . CONDICIONAL
    (13) COMANDO -> . REPETICAO
    (14) ATRIBUICOES -> . ID ATRIB EXPR
    (15) LEITURA -> . LER LPAREN IDS RPAREN
    (16) ESCRITA -> . ESCREVER LPAREN ESPR_STR RPAREN
    (24) COMPOSTO -> . INICIO COMANDOS FIM
    (25) CONDICIONAL -> . SE EXPR_LOGICA ENTAO COMANDOS SENAO COMANDOS FIM
    (26) CONDICIONAL -> . SE EXPR_LOGICA ENTAO COMANDOS FIM
    (27) REPETICAO -> . ENQUANTO EXPR_LOGICA FACA COMANDOS FIM

    FIM             reduce using rule 7 (COMANDOS -> .)
    ID              shift and go to state 10
    LER             shift and go to state 20
    ESCREVER        shift and go to state 21
    INICIO          shift and go to state 11
    SE              shift and go to state 22
    ENQUANTO        shift and go to state 23

    COMANDOS                       shift and go to state 12
    COMANDO                        shift and go to state 13
    ATRIBUICOES                    shift and go to state 14
    LEITURA                        shift and go to state 15
    ESCRITA                        shift and go to state 16
    COMPOSTO                       shift and go to state 17
    CONDICIONAL                    shift and go to state 18
    REPETICAO                      shift and go to state 19

state 8

    (2) DECLARACOES -> VAR IDS . COLON TIPO SEMI DECLARACOES

    COLON           shift and go to state 24


state 9

    (28) IDS -> ID . _IDS
    (29) _IDS -> . COMMA ID _IDS
    (30) _IDS -> .

    COMMA           shift and go to state 26
    COLON           reduce using rule 30 (_IDS -> .)
    RPAREN          reduce using rule 30 (_IDS -> .)

    _IDS                           shift and go to state 25

state 10

    (14) ATRIBUICOES -> ID . ATRIB EXPR

    ATRIB           shift and go to state 27


state 11

    (24) COMPOSTO -> INICIO . COMANDOS FIM
    (6) COMANDOS -> . COMANDO SEMI COMANDOS
    (7) COMANDOS -> .
    (8) COMANDO -> . ATRIBUICOES
    (9) COMANDO -> . LEITURA
    (10) COMANDO -> . ESCRITA
    (11) COMANDO -> . COMPOSTO
    (12) COMANDO -> . CONDICIONAL
    (13) COMANDO -> . REPETICAO
    (14) ATRIBUICOES -> . ID ATRIB EXPR
    (15) LEITURA -> . LER LPAREN IDS RPAREN
    (16) ESCRITA -> . ESCREVER LPAREN ESPR_STR RPAREN
    (24) COMPOSTO -> . INICIO COMANDOS FIM
    (25) CONDICIONAL -> . SE EXPR_LOGICA ENTAO COMANDOS SENAO COMANDOS FIM
    (26) CONDICIONAL -> . SE EXPR_LOGICA ENTAO COMANDOS FIM
    (27) REPETICAO -> . ENQUANTO EXPR_LOGICA FACA COMANDOS FIM

    FIM             reduce using rule 7 (COMANDOS -> .)
    ID              shift and go to state 10
    LER             shift and go to state 20
    ESCREVER        shift and go to state 21
    INICIO          shift and go to state 11
    SE              shift and go to state 22
    ENQUANTO        shift and go to state 23

    COMANDOS                       shift and go to state 28
    COMANDO                        shift and go to state 13
    ATRIBUICOES                    shift and go to state 14
    LEITURA                        shift and go to state 15
    ESCRITA                        shift and go to state 16
    COMPOSTO                       shift and go to state 17
    CONDICIONAL                    shift and go to state 18
    REPETICAO                      shift and go to state 19

state 12

    (1) PROG -> PROGRAMA ID SEMI DECLARACOES INICIO COMANDOS . FIM DOT

    FIM             shift and go to state 29


state 13

    (6) COMANDOS -> COMANDO . SEMI COMANDOS

    SEMI            shift and go to state 30


state 14

    (8) COMANDO -> ATRIBUICOES .

    SEMI            reduce using rule 8 (COMANDO -> ATRIBUICOES .)


state 15

    (9) COMANDO -> LEITURA .

    SEMI            reduce using rule 9 (COMANDO -> LEITURA .)


state 16

    (10) COMANDO -> ESCRITA .

    SEMI            reduce using rule 10 (COMANDO -> ESCRITA .)


state 17

    (11) COMANDO -> COMPOSTO .

    SEMI            reduce using rule 11 (COMANDO -> COMPOSTO .)


state 18

    (12) COMANDO -> CONDICIONAL .

    SEMI            reduce using rule 12 (COMANDO -> CONDICIONAL .)


state 19

    (13) COMANDO -> REPETICAO .

    SEMI            reduce using rule 13 (COMANDO -> REPETICAO .)


state 20

    (15) LEITURA -> LER . LPAREN IDS RPAREN

    LPAREN          shift and go to state 31


state 21

    (16) ESCRITA -> ESCREVER . LPAREN ESPR_STR RPAREN

    LPAREN          shift and go to state 32


state 22

    (25) CONDICIONAL -> SE . EXPR_LOGICA ENTAO COMANDOS SENAO COMANDOS FIM
    (26) CONDICIONAL -> SE . EXPR_LOGICA ENTAO COMANDOS FIM
    (45) EXPR_LOGICA -> . TERMO_LOGICO OR EXPR_LOGICA
    (46) EXPR_LOGICA -> . TERMO_LOGICO
    (47) TERMO_LOGICO -> . FATOR_LOGICO AND TERMO_LOGICO
    (48) TERMO_LOGICO -> . FATOR_LOGICO
    (49) FATOR_LOGICO -> . NOT FATOR_LOGICO
    (50) FATOR_LOGICO -> . RELACIONAL
    (51) FATOR_LOGICO -> . LPAREN EXPR_LOGICA RPAREN
    (52) FATOR_LOGICO -> . ID
    (53) FATOR_LOGICO -> . BOOL
    (54) RELACIONAL -> . EXPR OP_REL EXPR
    (31) EXPR -> . TERMO EXPR_
    (35) TERMO -> . FATOR TERMO_
    (39) FATOR -> . NUM
    (40) FATOR -> . ID
    (41) FATOR -> . LPAREN EXPR RPAREN
    (42) FATOR -> . MENOS FATOR
    (43) FATOR -> . COMMA FATOR
    (44) FATOR -> . BOOL

    NOT             shift and go to state 36
    LPAREN          shift and go to state 38
    ID              shift and go to state 39
    BOOL            shift and go to state 40
    NUM             shift and go to state 44
    MENOS           shift and go to state 45
    COMMA           shift and go to state 46

    EXPR_LOGICA                    shift and go to state 33
    TERMO_LOGICO                   shift and go to state 34
    FATOR_LOGICO                   shift and go to state 35
    RELACIONAL                     shift and go to state 37
    EXPR                           shift and go to state 41
    TERMO                          shift and go to state 42
    FATOR                          shift and go to state 43

state 23

    (27) REPETICAO -> ENQUANTO . EXPR_LOGICA FACA COMANDOS FIM
    (45) EXPR_LOGICA -> . TERMO_LOGICO OR EXPR_LOGICA
    (46) EXPR_LOGICA -> . TERMO_LOGICO
    (47) TERMO_LOGICO -> . FATOR_LOGICO AND TERMO_LOGICO
    (48) TERMO_LOGICO -> . FATOR_LOGICO
    (49) FATOR_LOGICO -> . NOT FATOR_LOGICO
    (50) FATOR_LOGICO -> . RELACIONAL
    (51) FATOR_LOGICO -> . LPAREN EXPR_LOGICA RPAREN
    (52) FATOR_LOGICO -> . ID
    (53) FATOR_LOGICO -> . BOOL
    (54) RELACIONAL -> . EXPR OP_REL EXPR
    (31) EXPR -> . TERMO EXPR_
    (35) TERMO -> . FATOR TERMO_
    (39) FATOR -> . NUM
    (40) FATOR -> . ID
    (41) FATOR -> . LPAREN EXPR RPAREN
    (42) FATOR -> . MENOS FATOR
    (43) FATOR -> . COMMA FATOR
    (44) FATOR -> . BOOL

    NOT             shift and go to state 36
    LPAREN          shift and go to state 38
    ID              shift and go to state 39
    BOOL            shift and go to state 40
    NUM             shift and go to state 44
    MENOS           shift and go to state 45
    COMMA           shift and go to state 46

    EXPR_LOGICA                    shift and go to state 47
    TERMO_LOGICO                   shift and go to state 34
    FATOR_LOGICO                   shift and go to state 35
    RELACIONAL                     shift and go to state 37
    EXPR                           shift and go to state 41
    TERMO                          shift and go to state 42
    FATOR                          shift and go to state 43

state 24

    (2) DECLARACOES -> VAR IDS COLON . TIPO SEMI DECLARACOES
    (4) TIPO -> . INTEIRO
    (5) TIPO -> . LOGICO

    INTEIRO         shift and go to state 49
    LOGICO          shift and go to state 50

    TIPO                           shift and go to state 48

state 25

    (28) IDS -> ID _IDS .

    COLON           reduce using rule 28 (IDS -> ID _IDS .)
    RPAREN          reduce using rule 28 (IDS -> ID _IDS .)


state 26

    (29) _IDS -> COMMA . ID _IDS

    ID              shift and go to state 51


state 27

    (14) ATRIBUICOES -> ID ATRIB . EXPR
    (31) EXPR -> . TERMO EXPR_
    (35) TERMO -> . FATOR TERMO_
    (39) FATOR -> . NUM
    (40) FATOR -> . ID
    (41) FATOR -> . LPAREN EXPR RPAREN
    (42) FATOR -> . MENOS FATOR
    (43) FATOR -> . COMMA FATOR
    (44) FATOR -> . BOOL

    NUM             shift and go to state 44
    ID              shift and go to state 52
    LPAREN          shift and go to state 54
    MENOS           shift and go to state 45
    COMMA           shift and go to state 46
    BOOL            shift and go to state 55

    EXPR                           shift and go to state 53
    TERMO                          shift and go to state 42
    FATOR                          shift and go to state 43

state 28

    (24) COMPOSTO -> INICIO COMANDOS . FIM

    FIM             shift and go to state 56


state 29

    (1) PROG -> PROGRAMA ID SEMI DECLARACOES INICIO COMANDOS FIM . DOT

    DOT             shift and go to state 57


state 30

    (6) COMANDOS -> COMANDO SEMI . COMANDOS
    (6) COMANDOS -> . COMANDO SEMI COMANDOS
    (7) COMANDOS -> .
    (8) COMANDO -> . ATRIBUICOES
    (9) COMANDO -> . LEITURA
    (10) COMANDO -> . ESCRITA
    (11) COMANDO -> . COMPOSTO
    (12) COMANDO -> . CONDICIONAL
    (13) COMANDO -> . REPETICAO
    (14) ATRIBUICOES -> . ID ATRIB EXPR
    (15) LEITURA -> . LER LPAREN IDS RPAREN
    (16) ESCRITA -> . ESCREVER LPAREN ESPR_STR RPAREN
    (24) COMPOSTO -> . INICIO COMANDOS FIM
    (25) CONDICIONAL -> . SE EXPR_LOGICA ENTAO COMANDOS SENAO COMANDOS FIM
    (26) CONDICIONAL -> . SE EXPR_LOGICA ENTAO COMANDOS FIM
    (27) REPETICAO -> . ENQUANTO EXPR_LOGICA FACA COMANDOS FIM

    FIM             reduce using rule 7 (COMANDOS -> .)
    SENAO           reduce using rule 7 (COMANDOS -> .)
    ID              shift and go to state 10
    LER             shift and go to state 20
    ESCREVER        shift and go to state 21
    INICIO          shift and go to state 11
    SE              shift and go to state 22
    ENQUANTO        shift and go to state 23

    COMANDO                        shift and go to state 13
    COMANDOS                       shift and go to state 58
    ATRIBUICOES                    shift and go to state 14
    LEITURA                        shift and go to state 15
    ESCRITA                        shift and go to state 16
    COMPOSTO                       shift and go to state 17
    CONDICIONAL                    shift and go to state 18
    REPETICAO                      shift and go to state 19

state 31

    (15) LEITURA -> LER LPAREN . IDS RPAREN
    (28) IDS -> . ID _IDS

    ID              shift and go to state 9

    IDS                            shift and go to state 59

state 32

    (16) ESCRITA -> ESCREVER LPAREN . ESPR_STR RPAREN
    (17) ESPR_STR -> . ITEM_ESCRITA ESPR_STR_
    (20) ITEM_ESCRITA -> . EXPR
    (21) ITEM_ESCRITA -> . EXPR_LOGICA
    (22) ITEM_ESCRITA -> . STR
    (23) ITEM_ESCRITA -> . ID
    (31) EXPR -> . TERMO EXPR_
    (45) EXPR_LOGICA -> . TERMO_LOGICO OR EXPR_LOGICA
    (46) EXPR_LOGICA -> . TERMO_LOGICO
    (35) TERMO -> . FATOR TERMO_
    (47) TERMO_LOGICO -> . FATOR_LOGICO AND TERMO_LOGICO
    (48) TERMO_LOGICO -> . FATOR_LOGICO
    (39) FATOR -> . NUM
    (40) FATOR -> . ID
    (41) FATOR -> . LPAREN EXPR RPAREN
    (42) FATOR -> . MENOS FATOR
    (43) FATOR -> . COMMA FATOR
    (44) FATOR -> . BOOL
    (49) FATOR_LOGICO -> . NOT FATOR_LOGICO
    (50) FATOR_LOGICO -> . RELACIONAL
    (51) FATOR_LOGICO -> . LPAREN EXPR_LOGICA RPAREN
    (52) FATOR_LOGICO -> . ID
    (53) FATOR_LOGICO -> . BOOL
    (54) RELACIONAL -> . EXPR OP_REL EXPR

    STR             shift and go to state 65
    ID              shift and go to state 66
    NUM             shift and go to state 44
    LPAREN          shift and go to state 60
    MENOS           shift and go to state 45
    COMMA           shift and go to state 46
    BOOL            shift and go to state 67
    NOT             shift and go to state 36

    ESPR_STR                       shift and go to state 61
    ITEM_ESCRITA                   shift and go to state 62
    EXPR                           shift and go to state 63
    EXPR_LOGICA                    shift and go to state 64
    TERMO                          shift and go to state 42
    TERMO_LOGICO                   shift and go to state 34
    FATOR                          shift and go to state 43
    FATOR_LOGICO                   shift and go to state 35
    RELACIONAL                     shift and go to state 37

state 33

    (25) CONDICIONAL -> SE EXPR_LOGICA . ENTAO COMANDOS SENAO COMANDOS FIM
    (26) CONDICIONAL -> SE EXPR_LOGICA . ENTAO COMANDOS FIM

    ENTAO           shift and go to state 68


state 34

    (45) EXPR_LOGICA -> TERMO_LOGICO . OR EXPR_LOGICA
    (46) EXPR_LOGICA -> TERMO_LOGICO .

    OR              shift and go to state 69
    ENTAO           reduce using rule 46 (EXPR_LOGICA -> TERMO_LOGICO .)
    FACA            reduce using rule 46 (EXPR_LOGICA -> TERMO_LOGICO .)
    COMMA           reduce using rule 46 (EXPR_LOGICA -> TERMO_LOGICO .)
    RPAREN          reduce using rule 46 (EXPR_LOGICA -> TERMO_LOGICO .)


state 35

    (47) TERMO_LOGICO -> FATOR_LOGICO . AND TERMO_LOGICO
    (48) TERMO_LOGICO -> FATOR_LOGICO .

    AND             shift and go to state 70
    OR              reduce using rule 48 (TERMO_LOGICO -> FATOR_LOGICO .)
    ENTAO           reduce using rule 48 (TERMO_LOGICO -> FATOR_LOGICO .)
    FACA            reduce using rule 48 (TERMO_LOGICO -> FATOR_LOGICO .)
    COMMA           reduce using rule 48 (TERMO_LOGICO -> FATOR_LOGICO .)
    RPAREN          reduce using rule 48 (TERMO_LOGICO -> FATOR_LOGICO .)


state 36

    (49) FATOR_LOGICO -> NOT . FATOR_LOGICO
    (49) FATOR_LOGICO -> . NOT FATOR_LOGICO
    (50) FATOR_LOGICO -> . RELACIONAL
    (51) FATOR_LOGICO -> . LPAREN EXPR_LOGICA RPAREN
    (52) FATOR_LOGICO -> . ID
    (53) FATOR_LOGICO -> . BOOL
    (54) RELACIONAL -> . EXPR OP_REL EXPR
    (31) EXPR -> . TERMO EXPR_
    (35) TERMO -> . FATOR TERMO_
    (39) FATOR -> . NUM
    (40) FATOR -> . ID
    (41) FATOR -> . LPAREN EXPR RPAREN
    (42) FATOR -> . MENOS FATOR
    (43) FATOR -> . COMMA FATOR
    (44) FATOR -> . BOOL

    NOT             shift and go to state 36
    LPAREN          shift and go to state 38
    ID              shift and go to state 39
    BOOL            shift and go to state 40
    NUM             shift and go to state 44
    MENOS           shift and go to state 45
    COMMA           shift and go to state 46

    FATOR_LOGICO                   shift and go to state 71
    RELACIONAL                     shift and go to state 37
    EXPR                           shift and go to state 41
    TERMO                          shift and go to state 42
    FATOR                          shift and go to state 43

state 37

    (50) FATOR_LOGICO -> RELACIONAL .

    AND             reduce using rule 50 (FATOR_LOGICO -> RELACIONAL .)
    OR              reduce using rule 50 (FATOR_LOGICO -> RELACIONAL .)
    ENTAO           reduce using rule 50 (FATOR_LOGICO -> RELACIONAL .)
    FACA            reduce using rule 50 (FATOR_LOGICO -> RELACIONAL .)
    COMMA           reduce using rule 50 (FATOR_LOGICO -> RELACIONAL .)
    RPAREN          reduce using rule 50 (FATOR_LOGICO -> RELACIONAL .)


state 38

    (51) FATOR_LOGICO -> LPAREN . EXPR_LOGICA RPAREN
    (41) FATOR -> LPAREN . EXPR RPAREN
    (45) EXPR_LOGICA -> . TERMO_LOGICO OR EXPR_LOGICA
    (46) EXPR_LOGICA -> . TERMO_LOGICO
    (31) EXPR -> . TERMO EXPR_
    (47) TERMO_LOGICO -> . FATOR_LOGICO AND TERMO_LOGICO
    (48) TERMO_LOGICO -> . FATOR_LOGICO
    (35) TERMO -> . FATOR TERMO_
    (49) FATOR_LOGICO -> . NOT FATOR_LOGICO
    (50) FATOR_LOGICO -> . RELACIONAL
    (51) FATOR_LOGICO -> . LPAREN EXPR_LOGICA RPAREN
    (52) FATOR_LOGICO -> . ID
    (53) FATOR_LOGICO -> . BOOL
    (39) FATOR -> . NUM
    (40) FATOR -> . ID
    (41) FATOR -> . LPAREN EXPR RPAREN
    (42) FATOR -> . MENOS FATOR
    (43) FATOR -> . COMMA FATOR
    (44) FATOR -> . BOOL
    (54) RELACIONAL -> . EXPR OP_REL EXPR

    NOT             shift and go to state 36
    LPAREN          shift and go to state 38
    ID              shift and go to state 39
    BOOL            shift and go to state 40
    NUM             shift and go to state 44
    MENOS           shift and go to state 45
    COMMA           shift and go to state 46

    EXPR_LOGICA                    shift and go to state 72
    EXPR                           shift and go to state 73
    TERMO_LOGICO                   shift and go to state 34
    TERMO                          shift and go to state 42
    FATOR_LOGICO                   shift and go to state 35
    FATOR                          shift and go to state 43
    RELACIONAL                     shift and go to state 37

state 39

    (52) FATOR_LOGICO -> ID .
    (40) FATOR -> ID .

  ! reduce/reduce conflict for RPAREN resolved using rule 40 (FATOR -> ID .)
    AND             reduce using rule 52 (FATOR_LOGICO -> ID .)
    OR              reduce using rule 52 (FATOR_LOGICO -> ID .)
    ENTAO           reduce using rule 52 (FATOR_LOGICO -> ID .)
    FACA            reduce using rule 52 (FATOR_LOGICO -> ID .)
    COMMA           reduce using rule 52 (FATOR_LOGICO -> ID .)
    VEZES           reduce using rule 40 (FATOR -> ID .)
    DIV             reduce using rule 40 (FATOR -> ID .)
    MAIS            reduce using rule 40 (FATOR -> ID .)
    MENOS           reduce using rule 40 (FATOR -> ID .)
    MENOR           reduce using rule 40 (FATOR -> ID .)
    MENORIG         reduce using rule 40 (FATOR -> ID .)
    MAIOR           reduce using rule 40 (FATOR -> ID .)
    MAIORIG         reduce using rule 40 (FATOR -> ID .)
    IGUAL           reduce using rule 40 (FATOR -> ID .)
    DIF             reduce using rule 40 (FATOR -> ID .)
    RPAREN          reduce using rule 40 (FATOR -> ID .)

  ! RPAREN          [ reduce using rule 52 (FATOR_LOGICO -> ID .) ]


state 40

    (53) FATOR_LOGICO -> BOOL .
    (44) FATOR -> BOOL .

  ! reduce/reduce conflict for RPAREN resolved using rule 44 (FATOR -> BOOL .)
    AND             reduce using rule 53 (FATOR_LOGICO -> BOOL .)
    OR              reduce using rule 53 (FATOR_LOGICO -> BOOL .)
    ENTAO           reduce using rule 53 (FATOR_LOGICO -> BOOL .)
    FACA            reduce using rule 53 (FATOR_LOGICO -> BOOL .)
    COMMA           reduce using rule 53 (FATOR_LOGICO -> BOOL .)
    VEZES           reduce using rule 44 (FATOR -> BOOL .)
    DIV             reduce using rule 44 (FATOR -> BOOL .)
    MAIS            reduce using rule 44 (FATOR -> BOOL .)
    MENOS           reduce using rule 44 (FATOR -> BOOL .)
    MENOR           reduce using rule 44 (FATOR -> BOOL .)
    MENORIG         reduce using rule 44 (FATOR -> BOOL .)
    MAIOR           reduce using rule 44 (FATOR -> BOOL .)
    MAIORIG         reduce using rule 44 (FATOR -> BOOL .)
    IGUAL           reduce using rule 44 (FATOR -> BOOL .)
    DIF             reduce using rule 44 (FATOR -> BOOL .)
    RPAREN          reduce using rule 44 (FATOR -> BOOL .)

  ! RPAREN          [ reduce using rule 53 (FATOR_LOGICO -> BOOL .) ]


state 41

    (54) RELACIONAL -> EXPR . OP_REL EXPR
    (55) OP_REL -> . MENOR
    (56) OP_REL -> . MENORIG
    (57) OP_REL -> . MAIOR
    (58) OP_REL -> . MAIORIG
    (59) OP_REL -> . IGUAL
    (60) OP_REL -> . DIF

